<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="UserViewModel"
            type="com.example.newsapp.viewmodel.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding_40"
        android:orientation="vertical"
        tools:context=".ui.main.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:layout_width="158dp"
            android:layout_height="177dp"
            android:layout_marginTop="@dimen/margin_top_20"
            android:src="@drawable/icon_play" />

        <EditText
            android:id="@+id/etUserNameLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_60"
            android:hint="@string/common_gmail"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="@dimen/margin_top_80"
            android:imeOptions="actionNext"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="@dimen/padding_10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text_18"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_top_15"
            android:background="@drawable/custom_edittext"
            android:layout_height="@dimen/height_60"
            android:drawableRight="@drawable/eyeslash_white"
            android:hint="@string/common_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/padding_10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text_18" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_marginTop="@dimen/margin_top_40"
            android:layout_width="match_parent"
            android:background="@drawable/custom_button"
            android:layout_height="@dimen/height_50"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/common_login"
            android:textSize="@dimen/text_login"
            />
        <TextView
            android:layout_marginTop="@dimen/margin_top_20"
            android:id="@+id/tvSignUp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up"
            android:textSize="@dimen/text_16"
            android:textColor="@color/black"
            />

    </LinearLayout>
</layout>


