<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="HomeViewModel"
            type="com.example.newsapp.viewmodel.HomeViewModel" />

        <variable
            name="UserViewModel"
            type="com.example.newsapp.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding_20"
        tools:context=".ui.main.HomeFragment">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome Mr.Sunday"
            android:textColor="@color/black"
            android:layout_marginVertical="@dimen/margin_vertical_5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/height_50"
            android:layout_height="@dimen/height_50"
            android:src="@drawable/profile"
            android:background="@color/black"
            app:cardCornerRadius="@dimen/radius_20"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="22dp">

        </de.hdodenhof.circleimageview.CircleImageView>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/svHome"
            android:layout_width="@dimen/height_0"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_30"
            android:background="@drawable/searchview_hint_color"
            android:textColorHint="@color/color_text_hint"
            app:layout_constraintEnd_toEndOf="@+id/ivProfile"
            app:layout_constraintStart_toStartOf="@+id/tvWelcome"
            app:queryHint="@string/search_news"
            tools:layout_editor_absoluteY="102dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcSearch"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/svHome"
            app:layout_constraintBottom_toTopOf="@id/nsc"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsc"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/rcSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="@dimen/height_0"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_22"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:paddingTop="@dimen/margin_top_5"
                    android:id="@+id/rcCategories"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_top_15"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginTop="@dimen/margin_25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_22"
                    android:textStyle="bold"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcPopular"
                    android:layout_marginTop="@dimen/margin_top_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/tvUpcoming"
                    android:layout_marginTop="@dimen/margin_top_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_22"
                    android:textStyle="bold"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcUpcoming"
                    android:layout_marginTop="@dimen/margin_top_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_40"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
